# mediasoup-ios-client

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  build.sh  build2.sh  build_2.sh  mediasoup-ios-client.podspec  mediasoup_ios_client.podspec  vl_mediasoup_client_ios.podspec  vl_mediasoup_ios_client.podspec
Project/: Bridging-Header.h  Consumer.swift  ConsumerWrapper.cpp  ConsumerWrapper.hpp  Test.swift
Project.xcodeproj/: project.pbxproj
Project.xcodeproj/xcshareddata/xcschemes/: Project.xcscheme  ProjectTests.xcscheme
Project/C++Wrapper/: Consumer.mm  ConsumerWrapper.mm  DeviceWrapper.mm  ProducerWrapper.mm  RecvTransport.mm  SendTransportWrapper.mm  TransportWrapper.mm
Project/C++Wrapper/include/: Consumer.h  Producer.h  Transport.h
Project/Sources/libmediasoup/: ConsumerWrapper.cpp  module.modulemap
Project/dependencies/: .gclient  .gclient_entries
Project/dependencies/.cipd/: tagcache.db
ProjectTests/: DeviceWrapperTest.m  DeviceWrapperTests.m
documentation/: Api.md  Installation.md
mediasoup-client-ios/: Consumer.mm  Device.h  Device.mm  Logger.mm  MediasoupClient.h  MediasoupClient.hpp  MediasoupClient.mm  Mediasoupclient.mm  Producer.mm  RecvTransport.mm  SendTransport.mm  Transport.mm
mediasoup-client-ios-tests/: ConsumerTests.m  DeviceTests.m  DeviceWrapperTests.m  Info.plist  MediasoupclientTests.m  ProducerTests.m  ProjectTests.m  TransportTests.m
mediasoup-client-ios-tests/data/: Parameters.h  Parameters.m
mediasoup-client-ios-tests/mocks/: RecvTransportListenerImpl.h  RecvTransportListenerImpl.m  SendTransportListenerImpl.m  SendTransportListernerImpl.h
mediasoup-client-ios-tests/utils/: Util.m  util.h
mediasoup-client-ios.xcodeproj/: project.pbxproj
mediasoup-client-ios.xcodeproj/xcshareddata/xcschemes/: mediasoup-client-ios.xcscheme
mediasoup-client-ios/C++Wrapper/: ConsumerWrapper.mm  DeviceWrapper.mm  LoggerWrapper.mm  MediasoupclientWrapper.mm  ProducerWrapper.mm  RecvTransport.mm  SendTransportWrapper.mm  TransportWrapper.mm
mediasoup-client-ios/C++Wrapper/include/: ConsumerWrapper.h  Device.h  DeviceWrapper.h  LoggerWrapper.h  MediasoupclientWrapper.h  Producer.h  ProducerWrapper.h  TransportWrapper.h
mediasoup-client-ios/C++Wrapper/webrtc/: AudioTrackImpl.h  MediaStreamTrackImpl.h
mediasoup-client-ios/dependencies/: CMakeLists.txt
mediasoup-client-ios/dependencies/webrtc/: mediasoup_webrtc.podspec
mediasoup-client-ios/include/: Consumer.h  DataConsumer.h  DataProducer.h  Device.h  Logger.h  MediasoupDevice.h  Mediasoupclient.h  Producer.h  RTCPeerConnectionOptions.h  RecvTransport.h  SendTransport.h  Transport.h
mediasoup-client-ios/include/wrapper/: ConsumerWrapper.h  DataConsumerWrapper.h  DataProducerWrapper.h  DeviceWrapper.h  MediasoupclientWrapper.h  ProducerWrapper.h  TransportWrapper.h
mediasoup-client-ios/src/: Consumer.mm  DataConsumer.mm  DataProducer.mm  Device.mm  MediasoupDevice.mm  MediasoupLogger.mm  Mediasoupclient.mm  Producer.mm  RecvTransport.mm  SendTransport.mm
mediasoup-client-ios/src/C++Wrapper/: ConsumerWrapper.mm  DataConsumerWrapper.mm  DataProducerWrapper.mm  (+4 more)
mediasoup-client-ios/utils/: RTCUtils.h  RTCUtils.m
mediasoup-ios-client.xcodeproj/: project.pbxproj
mediasoup-ios-client.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
patches/: BUILD.patch  RTCPeerConnectionFactoryBuilder.patch  RTCStatisticsReport.patch  abseil_optional.patch  builtin_audio_decoder_factory.patch  builtin_audio_encoder_factory.patch  byte_order.h  find_sdk.py  rtc_stats.patch  sdk_BUILD.patch  sdp_video_format_utils.patch  str_cat.patch
vl-mediasoup-client-ios/: VLMediasoupClientiOS.modulemap
vl-mediasoup-client-ios-tests/: MediasoupDeviceTests.m
vl-mediasoup-client-ios.xcodeproj/: project.pbxproj
vl-mediasoup-client-ios.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
vl-mediasoup-client-ios/dependencies/: CMakeLists.txt
vl-mediasoup-client-ios/include/: Consumer.h  MediasoupDevice.h  Producer.h  RTCUtils.h  RecvTransport.h  SendTransport.h  Transport.h
vl-mediasoup-client-ios/src/: Consumer.mm  MediasoupDevice.mm  Mediasoupclient.mm  Producer.mm  RecvTransport.mm  SendTransport.mm  Transport.mm
(+26 files in other folders)
